syntax = "proto3";
package com.example.demogrpc.grpc.CityCore;

message CityScoreRequest {
  int32 city_code = 1;
}